syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.file";

package proto.file;

import public "base.proto";
import public "type.proto";
import public "stream.proto";


service FileService {
	rpc readHdfsFile(stream proto.stream.UpMessage) returns (stream proto.stream.DownMessage);
	rpc writeHdfsFile(stream proto.stream.UpMessage) returns (stream proto.stream.DownMessage);
	rpc deleteHdfsFile(StringProto) returns (BoolResponse);
}

message WriteHdfsFileRequest {
	StringProto path = 1;		// 업로드될 데이터를 저장할 HDFS 파일 경로
	oneof optional_block_size {
		int64 block_size = 2;	// 생성될 HDFS 파일의 블럭 크기. (기본값: 128mb)
	}
}